--- a/htmls/story.html
+++ b/htmls/story.html
@@ -29,71 +29,48 @@
             </div>
                
             <div id="bodymain">
-貴方達は、多額の賞金を得ることができるゲームがあるとの噂を聞いて、とあるビルの一室へとやってきた。
-
-
-
-しかし部屋に入った途端、辺りは眩い光に包まれ、意識が遠のいていく。そんな中、頭の中に声が響く。
-
-『一攫千金のゲームへようこそ！はははははははははは！』
-
-
-
+<p>
+貴方達は、多額の賞金を得ることができるゲームがあるとの噂を聞いて、とあるビルの一室へとやってきた。<br>
+しかし部屋に入った途端、辺りは眩い光に包まれ、意識が遠のいていく。そんな中、頭の中に声が響く。<br>
+『一攫千金のゲームへようこそ！はははははははははは！』<br>
+<br>
 目を覚ますと目の前には1台のロボットがいた。
+<hr>
+こんにちは、エクスプローラ。<br>
+この空間は？<br>
+ここは一攫千金のゲームの舞台、「さいばぁすぺぇす」です。あなたの身体はこの電脳空間に再構築されました。<br>
+<br>
+ゲームの内容は？<br>
+トレジャーハントです。提示された宝を持ち帰ることができれば、パーティ全員に賞金が与えられます。<br>
+<br>
+死ぬとどうなるの？<br>
+もちろん現実のあなたも死亡します。あなたはあなたですから。<br>
+ですが心配しないでください。あなたには残機が6あります。<br>
+<br>
+それと、そうそう、この空間では現在AVDBプログラムが動作しています。<br>
+ウイルスがバグを作り出してしまっているようで。<br>
+その対策プログラムでバグを消去する働きをしています。<br>
+あなたもバグを見つけましたら、即座にそのデリートガンで消去してください。<br>
+ご協力お願いいたします。バグの影響を受けたエンティティがとるとされる行為は次の通りです。
+<ul>
+    <li>ミッションのクリアを妨げるような行為</li>
+    <li>明らかに人間離れした技能</li>
+</ul>
+<br>
+まずはそこのギルドでミッションを確認してください。パーティメンバーにも出会えるでしょう。<br>
+それではご幸運を、エクスプローラ。<br>
+<hr>
 
-//———————————————//
-
-こんにちは、エクスプローラ。
-
-
-
-この空間は？
-
-ここは一攫千金のゲームの舞台、「さいばぁすぺぇす」です。あなたの身体はこの電脳空間に再構築されました。
-
-
-
-ゲームの内容は？
-
-トレジャーハントです。提示された宝を持ち帰ることができれば、パーティ全員に賞金が与えられます。
-
-
-
-死ぬとどうなるの？
-
-もちろん現実のあなたも死亡します。あなたはあなたですから。ですが心配しないでください。あなたには残機が6あります。
-
-
-
-それと、そうそう、この空間では現在AVDBプログラムが動作しています。ウイルスがバグを作り出してしまっているようで。その対策プログラムでバグを消去する働きをしています。あなたもバグを見つけましたら、即座にそのデリートガンで消去してください。ご協力お願いいたします。バグの影響を受けたエンティティがとるとされる行為は次の通りです。
-
-・ミッションのクリアを妨げるような行為
-
-・明らかに人間離れした技能
-
-
-
-まずはそこのギルドでミッションを確認してください。パーティメンバーにも出会えるでしょう。
-
-それではご幸運を、エクスプローラ。
-
-//———————————————//
+ギルドで合流した貴方達は目標となる宝とその賞金を提示される。<br>
+<br>
+いざ出発しよう、とした時貴方に1通の匿名メールが届く。<br>
+そこにはまた、ミッションが記されていた。<br>
+その内容は本来のミッション目標に背くものであったが、報酬金は比べ物にならないほどの額である。<br>
+<br>
+</p>
+<h3>アナタノ目標ハ、表ノミッションを遂行スルフリヲシナガラ、バレナイヨウニ裏ミッションヲ完了スルコトデス。エクスプローラ。<h3>
 
 
-
-ギルドで合流した貴方達は目標となる宝とその賞金を提示される。
-
-
-
-いざ出発しよう、とした時貴方に1通の匿名メールが届く。そこにはまた、ミッションが記されていた。その内容は本来のミッション目標に背くものであったが、報酬金は比べ物にならないほどの額である。
-
-
-
-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/
-
-アナタノ目標ハ、表ノミッションを遂行スルフリヲシナガラ、バレナイヨウニ裏ミッションヲ完了スルコトデス。エクスプローラ。
-
-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/-/
 
             
 
