--- a/htmls/story.html
+++ b/htmls/story.html
@@ -29,6 +29,7 @@
             </div>
                
             <div id="bodymain">
+<h2>さいばぁすぺぇす</h2>
 <p>
 貴方達は、多額の賞金を得ることができるゲームがあるとの噂を聞いて、とあるビルの一室へとやってきた。<br>
 しかし部屋に入った途端、辺りは眩い光に包まれ、意識が遠のいていく。そんな中、頭の中に声が響く。<br>
