--- a/htmls/story.html
+++ b/htmls/story.html
@@ -44,7 +44,7 @@
 ゲームの内容は？<br>
 トレジャーハントです。提示された宝を持ち帰ることができれば、パーティ全員に賞金が与えられます。<br>
 <br>
-死ぬとどうなるの？<br>
+死ぬとどうなる？<br>
 もちろん現実のあなたも死亡します。あなたはあなたですから。<br>
 ですが心配しないでください。あなたには残機が6あります。<br>
 <br>
