--- a/htmls/story.html
+++ b/htmls/story.html
@@ -66,7 +66,7 @@
 <br>
 いざ出発しよう、とした時貴方に1通の匿名メールが届く。<br>
 そこにはまた、ミッションが記されていた。<br>
-その内容は本来のミッション目標に背くものであったが、報酬金は比べ物にならないほどの額である。<br>
+その内容は本来のミッション目標に背くものだが、報酬金は比べ物にならないほどの額であった。<br>
 <br>
 </p>
 <h3>アナタノ目標ハ、表ノミッションを遂行スルフリヲシナガラ、バレナイヨウニ裏ミッションヲ完了スルコトデス。エクスプローラ。<h3>
