--- a/htmls/story.html
+++ b/htmls/story.html
@@ -38,7 +38,8 @@
 目を覚ますと目の前には1台のロボットがいた。
 <hr>
 こんにちは、エクスプローラ。<br>
-この空間は？<br>
+<br>
+ここは？<br>
 ここは一攫千金のゲームの舞台、「さいばぁすぺぇす」です。あなたの身体はこの電脳空間に再構築されました。<br>
 <br>
 ゲームの内容は？<br>
