--- a/htmls/story.html
+++ b/htmls/story.html
@@ -70,8 +70,9 @@
 その内容は本来のミッション目標に背くものだが、報酬金は比べ物にならないほどの額であった。<br>
 <br>
 </p>
-<h3>アナタノ目標ハ、表ノミッションを遂行スルフリヲシナガラ、バレナイヨウニ裏ミッションヲ完了スルコトデス。エクスプローラ。<h3>
-    <a href="./index.html>キャラクターシート作成</a>
+<h3>アナタノ目標ハ、表ノミッションを遂行スルフリヲシナガラ、バレナイヨウニ裏ミッションヲ完了スルコトデス。エクスプローラ。</h3>
+<br>
+<a href="./index.html>キャラクターシート作成</a>
 
 
 
