--- a/htmls/story.html
+++ b/htmls/story.html
@@ -73,8 +73,9 @@
 <h3>アナタノ目標ハ、表ノミッションを遂行スルフリヲシナガラ、バレナイヨウニ裏ミッションヲ完了スルコトデス。エクスプローラ。</h3>
 </div><!--//////KOKOMADE///////-->
         <div id="bodysub">
-            <a href="./index.html">キャラクターシート作成</a>
+            <a href="./index.html" class="floatctrl">キャラクターシート作成</a>
         </div>
+        <br>
 
     </div>
 
