--- a/view.html
+++ b/view.html
@@ -28,8 +28,8 @@
 				},false);
 			</script>
 				<div id="bodymain">
-					<h3><span id="pcname">キャラクター名</span></h3>
-					<p><span id="pcdetl" style="font-size:10px;">キャラクター詳細</span></p>
+					<h3 style="margin-bottom:0px;"><span id="pcname">キャラクター名</span></h3>
+					<span style="margin-top:0px;"><span id="pcdetl" style="font-size:10px;">キャラクター詳細</span></span>
 					<table  width="100%" class="st">
 						<tr>
 							<th class="st">STR</th>
