--- a/index.html
+++ b/index.html
@@ -157,6 +157,14 @@
     対象が非PC: 罠などを看破できる。<br>
     失敗時死亡。
   </div>
+  <h4 class="subtitle">爆発主義</h4>
+  <div class="subtext">
+    <span class="colText">条件: INTが18</span><br>
+    成功率60%<br>
+    触れたものを爆弾にする。<br>
+    失敗時死亡。
+  </div>
+  
 </div>
 <hr>
 <div id="skill" style="z-index: 1;">
